package.json corrected, register improved

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.0.4",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
+    "passport-local": "^1.0.0"
   }
 }
