--- a/public/bower.json
+++ b/public/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "mpcc_api",
+  "name": "Coding_Project",
   "homepage": "https://github.com/Peutra/rails_angular",
   "authors": [
-    "Benoit Nguyen"
+    "Coding Project Team"
   ],
   "description": "",
   "main": "",
@@ -21,11 +21,13 @@
     "angular-materialize": "^0.2.2",
     "font-awesome": "^4.7.0",
     "angular-local-storage": "^0.5.2",
+    "angular-socket-io": "^0.7.0",
+    "bootstrap": "^3.3.7",
     "angular-jwt": "^0.1.9",
     "cloudinary_ng": "^2.1.1",
     "angular-upload": "^1.0.12",
     "angular-file-upload": "^2.4.1",
-    "angular-hovercard": "^1.0.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "angular-bootstrap": "^2.5.0"
   }
 }
