--- a/public/bower.json
+++ b/public/bower.json
@@ -28,6 +28,8 @@
     "angular-upload": "^1.0.12",
     "angular-file-upload": "^2.4.1",
     "underscore": "^1.8.3",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "metisMenu": "metismenu#^2.6.2",
+    "jquery-slimscroll": "^1.3.8"
   }
 }
