--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "express": "^4.14.1",
     "express-jwt": "^5.1.0",
     "express-session": "^1.15.0",
+    "multer": "^1.3.0",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.0.4",
     "passport": "^0.3.2",
