--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pipedrive": "^3.0.0",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "stripe": "^4.15.0"
   }
 }
