--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pipedrive": "^3.0.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
+    "socket.io": "^1.7.2",
     "stripe": "^4.15.0"
   }
 }
