--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "socket.io": "^1.7.2",
-    "stripe": "^4.15.0"
+    "stripe": "^4.15.0",
+    "cors": "^2.8.1",
+    "multer": "^1.3.0"
   }
 }
