--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "algoliasearch": "^3.21.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
+    "cloudinary": "^1.7.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "express": "^4.14.1",
     "express-jwt": "^5.1.0",
     "express-session": "^1.15.0",
+    "multer": "^1.3.0",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.0.4",
     "passport": "^0.3.2",
@@ -25,8 +28,6 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "socket.io": "^1.7.2",
-    "stripe": "^4.15.0",
-    "cors": "^2.8.1",
-    "multer": "^1.3.0"
+    "stripe": "^4.15.0"
   }
 }
